--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
-    "name": "pagedown",
-    "version": "1.1.0",
-    "description": "markdown converter, based on showdown",
-    "repository": { "type": "hg", "url": "https://code.google.com/p/pagedown/" },
-    "keywords": ["markdown"],
+    "name": "awesome-pagedown",
+    "version": "0.1.0",
+    "description": "markdown converter, based on showdown, font-awesome icons",
+    "repository": { "type": "git", "url": "https://github.com/micrum/awesome-pagedown" },
+    "keywords": ["markdown", "font-awesome"],
     "license": "MIT",
     "files": ["Markdown.Converter.js", "Markdown.Sanitizer.js", "node-pagedown.js"],
     "main": "node-pagedown.js",
     "bugs": "http://code.google.com/p/pagedown/issues/list",
-    "homepage": "http://code.google.com/p/pagedown/wiki/PageDown"
+    "homepage": "http://code.google.com/p/pagedown/wiki/PageDown",
+    "devDependencies": {
+        "font-awesome": "~4.4.0"
+    }
 }
